add pluses and minuses exercise 1

--- a/plusesAndMinuses.html
+++ b/plusesAndMinuses.html
@@ -2,9 +2,22 @@
 <html>
   <head>
     <title>Pluses and Minuses</title>
+    <style>
+      button {
+        border-style: solid;
+        border-width: 1px;
+        display: inline;
+        font-size: 1rem;
+      }
+    </style>
   </head>
 
   <body>
-    <!-- Your HTML here -->
+    <p>Counter: <span class="counter-display"></span></p>
+
+    <button class="plus-btn">counter++</button>
+    <button class="minus-btn">counter--</button>
   </body>
+
+  <script src="plusesAndMinuses.js"></script>
 </html>
